#
# Copyright NEXTDC LTD. 2014
# 

# Provides access to CMAKE_INSTALL_LIBDIR -> lib or lib64
# requires cmake >= 2.8, therefore not in RHEL6
#INCLUDE(GNUInstallDirs)

IF (CMAKE_SIZEOF_VOID_P MATCHES "8")
  SET (LIB_SUFFIX "64")
ENDIF (CMAKE_SIZEOF_VOID_P MATCHES "8")
SET (LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}")

FIND_PACKAGE(LibXml2 REQUIRED)
IF(LIBXML2_FOUND)
    INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
    SET (LIBS ${LIBS} ${LIBXML2_LIBRARIES})
ENDIF(LIBXML2_FOUND)

# Standard build flags
SET (CMAKE_C_FLAGS "-g -Wall -Werror")

# Debug build flags. cmake -DCMAKE_BUILD_TYPE=Debug .
SET (CMAKE_C_FLAGS_DEBUG "-g -Wall -Werror -DDEBUG -DDEBUG_REFCNT -DDEBUG_VALGRIND -DDEBUG_CACHE")

SET(INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/include")

set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(FindKernelHeaders)
INCLUDE_DIRECTORIES(${KERNELHEADERS_INCLUDE_DIRS})

FILE(GLOB OBIX_LIB_FILES *.c)
ADD_LIBRARY(libobix SHARED ${OBIX_LIB_FILES})
TARGET_LINK_LIBRARIES(libobix ${LIBS})
SET_TARGET_PROPERTIES(libobix PROPERTIES OUTPUT_NAME "obix")
SET_TARGET_PROPERTIES(libobix PROPERTIES SOVERSION 0)

# Install .so into /usr/lib$suffix. 
INSTALL(TARGETS libobix LIBRARY DESTINATION "${LIB_INSTALL_DIR}")

# Install header files
FILE(GLOB HEADER_FILES "*.h")
INSTALL(FILES ${HEADER_FILES}
    DESTINATION "${INCLUDE_DIR}/obix")


